@@ -136,6 +136,9 @@ struct _FmAppConfig
     int sort_by;
 #endif
     gboolean show_statusbar;
+#if FM_CHECK_VERSION(1, 2, 0)
+    char *home_path;
+#endif
 
     /*char* su_cmd;*/
 
