@@ -198,6 +198,11 @@ Changes on 1.2.0 since 1.1.0:
 * Added new menu option 'Edit'->'Copy Path(s)' to copy text paths for the
     selection into clipboard.
 
+* Added new config option 'home_path' (unset by default) which defines
+    the file path or URI string to open when 'Home Folder' is activated
+    in side pane, toolbar, or menu. Available only with LibFM 1.2.0 or
+    newer.
+
 
 Changes on 1.1.0 since 1.0.1:
 
